option('PRINTER',
  type : 'string',
  description : 'Define printer device path.',
  yield: true,  # use superproject option if available
)
option('MAX_POS_X',
  type: 'integer',
  min: 0,
  max: 100,
  value: 96,
  yield: true,
  description: 'Maximum printer position in mm.',
)
option('MAX_POS_Y',
  type: 'integer',
  min: 0,
  max: 100,
  value: 42,
  yield: true,
  description: 'Maximum printer position in mm.',
)
option('MAX_POS_Z',
  type: 'integer',
  min: 0,
  max: 100,
  value: 47,
  yield: true,
  description: 'Maximum printer position in mm.',
)
option('MAX_POS_F',
  type: 'integer',
  min: 0,
  max: 100,
  value: 10,
  yield: true,
  description: 'Maximum printer position in mm.',
)
